# setup2_ni

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  mex.zip.REMOVED.git-id  notes.m
mex/: AsyncVideoInterface.m  NIInterface.m  TransformNIGazeCoordinates.m  build_ni.m  example_video_interface.m  ni.bin.REMOVED.git-id  ni_mex.asv  ni_mex.cpp  ni_mex.mexmaci64  ni_mex.mexw64
src/: ni.cpp  ni.hpp  ni_stub.h  ringbuffer.hpp  task_interface.cpp  task_interface.hpp  task_interface_dummy.cpp
task/: AsyncVideoInterface.m  ChoiceTracker.m  DefaultTrialGenerator.m  FixationStateTracker.m  MatlabTimeSync.m  MyTrialGenerator.m  NIGazeTracker.m  NPXIEventsInterface.m  ParallelErrorChecker.m  Setup3RewardInterface.m  TaskData.m  TaskInterface.m  TransformNIGazeCoordinates.m  TrialRecord.m  calchunk.m  collM2Trials.m  geneSound.m  get_eye_roi_from_calibration_file.m  get_face_roi_from_calibration_file.m  get_latest_far_plane_calibrations.m  get_latest_fv_far_plane_calibration_file_names.m  joint_fixation2.m  joint_fixation3.m  joint_fixation4.m  ni.bin.REMOVED.git-id  notes.m  open_window.m  run_gf.m  run_gf_pair_train_Ehron_0.m  run_gf_pair_train_Ephron_1.m  run_gf_pair_train_Ephron_2.m  run_gf_pair_train_L_E_stage2.m  run_gf_pair_train_L_E_stage2_1.m  run_gf_pair_train_L_E_stage2_3.m  run_gf_pair_train_L_E_stage2_3_control_part_1.m  run_gf_pair_train_L_E_stage2_4.m  run_gf_pair_train_L_E_stage2_5.m  run_gf_pair_train_L_E_stage2_6.m  run_gf_pair_train_L_E_stage3.m  run_gf_pair_train_L_H_1.m  (+39 more)
tool/: convert_m1_gaze_position_to_pixels.m  debug_matlab_ni.m  read_ni_data.m  (+15 more)
(+4 files in other folders)
